# rgadget

./: .gitignore  Cargo.toml  README.md
.devcontainer/: Dockerfile
.devcontainer/local/: devcontainer.json
.devcontainer/rgadget/: devcontainer.json
data/: aarch64.elf  arm.elf  ppc.elf  x64.elf
src/: args.rs  binary.rs  chain.rs  chains.rs  colours.rs  disassembler.rs  instruction.rs  machine.rs  main.rs  progress.rs  regex.rs  section.rs
src/arch/: mod.rs
src/arch/aarch64/: chain.rs  disassembly.rs  insn.rs
src/arch/arm/: chain.rs  insn.rs  mod.rs
src/arch/arm/disassembly/: arm.rs  thumb.rs
src/arch/powerpc/: chain.rs  disassembly.rs  insn.rs
src/arch/x64/: chain.rs  disassembly.rs  insn.rs
