[package]
name = "rgadget"
version = "2.0.0"
edition = "2021"
repository = "https://github.com/WorksButNotTested/rgadget.git"
authors = [ "WorksButNotTested" ]

[profile.profiling]
inherits = "release"
debug = true

[package.metadata.wix]
upgrade-guid = "B28CF1BE-2E48-4009-965B-328CE96FB2C6"
path-guid = "04CB0F94-5674-477A-AFB8-C687A7946FD5"
license = false
eula = false

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.86"
capstone = { version = "0.12.0" }
clap = { version = "4.5.4", features = ["derive"] }
dashmap = { version = "5.5.3", features = ["rayon"] }
env_logger = "0.11.3"
fancy-regex = "0.13.0"
goblin = "0.8.2"
indicatif = { version = "0.17.8", features = ["rayon"] }
itertools = "0.13.0"
lazy_static = "1.5.0"
libc = "0.2.153"
log = "0.4.22"
memmap2 = "0.9.4"
num_cpus = "1.16.0"
rayon = "1.10.0"
readonly = "0.2.12"
regex = "1.10.4"
typed-builder = "0.18.2"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.19.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false
# Path that installers should place binaries in
install-path = "CARGO_HOME"
